# jura7park

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: build.yml
db/: admin.py  derivatives.py  models.py  serializers.py  views.py
db/migrations/: 0001_initial.py
jura7park/: asgi.py  auth.py  discord.py  request_be.py  settings.py  urls.py  views.py  wsgi.py
pwa/: urls.py
pwa/templates/: offline.html
scripts/: entrypoint.sh
templates/: base.html  err.html
