[project]
name = "jura7park"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord-webhook>=1.3.1",
    "django-environ>=0.11.2",
    "django>=5.1.4",
    "djangorestframework>=3.15.2",
    "numpy>=2.2.1",
    "pillow>=11.0.0",
    "qrcode>=8.0",
    "social-auth-app-django>=5.4.2",
    "pyjwt>=2.10.1",
]
